# pbuild-ai

./: AGENTS.md  LEGACY_OBS_WORKAROUNDS.md  LICENSE  Makefile  README.md  pbuild-ai  pyproject.toml
man/: pai.1  pbuild-ai.1
src/pbuild_ai/: context.py  diff_utils.py  generate_mode.py  modify_mode.py  network.py  ollama_client.py  parsing.py  pbuild_ai.py  query_gitexplorer.py  query_source_url.pl  skill_manager.py  spinner.py  tools.py  utils.py  workspace.py
src/pbuild_ai/skills/: OPENSUSE.md  changelog_skill.py  cleanup_skill.py  deep_analyze_skill.py  ffmpeg_skill.py  fonts_skill.py  generate_mode_skill.py  lang_R_skill.py  lang_electron_skill.py  lang_erlang_skill.py  lang_go_skill.py  lang_java_skill.py  lang_lisp_skill.py  lang_lua_skill.py  lang_nodejs_skill.py  lang_perl_skill.py  lang_php_skill.py  lang_pyqt_sip_skill.py  lang_python_skill.py  lang_ruby_skill.py  lang_rust_skill.py  lang_typelibs_skill.py  python_skill.py  qt5_skill.py  remoteasset_skill.py  systemd_skill.py  unresolvable_skill.py  version_research_skill.py
src/pbuild_ai/tests/: test_anti_oscillation.py  test_archive_tools.py  test_build_guard.py  test_exit_codes.py  test_modify_urls.py  test_read_coverage.py  test_skills.py  test_stats.py  test_tarball_hint.py  test_tools_sandbox.py
